data-app/objects/Volunteer_Event_Participant_Home__dlm/fields/KQ_mvpbo3_Volunteer_Event_c__c.field-meta.xml
<CustomField>
    <fullName>KQ_mvpbo3_Volunteer_Event_c__c</fullName>
    <label>Key Qualifier Volunteer Event</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier Volunteer Event</labelOverride>
        <masterLabel>Key Qualifier Volunteer Event</masterLabel>
        <refAttrDeveloperName>KQ_mvpbo3_Volunteer_Event_c</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>