data-app/objects/Volunteer_Event_Participant_Home__dlm/fields/KQ_Name__c.field-meta.xml
<CustomField>
    <fullName>KQ_Name__c</fullName>
    <label>Key Qualifier Volunteer Event Participan</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier Volunteer Event Participant Name</labelOverride>
        <masterLabel>Key Qualifier Volunteer Event Participan</masterLabel>
        <refAttrDeveloperName>KQ_Name</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>