data-app/objects/Volunteer_Event_Participant_Home__dlm/fields/mvpbo3_Participant_c__c.field-meta.xml
<CustomField>
    <fullName>mvpbo3_Participant_c__c</fullName>
    <label>Participant</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Participant</labelOverride>
        <masterLabel>Participant</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>