data-app/objects/Volunteer_Event_Participant_Home__dlm/fields/mvpbo3_Volunteer_Event_c__c.field-meta.xml
<CustomField>
    <fullName>mvpbo3_Volunteer_Event_c__c</fullName>
    <label>Volunteer Event</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Volunteer Event</labelOverride>
        <masterLabel>Volunteer Event</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>