data-app/objects/Volunteer_Event_Participant_Home__dlm/fields/rel_1725930713715_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1725930713715_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>mvpbo3_Volunteer_Event_Participant_H_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>mvpbo3_Volunteer_Event_Participant_H_rel</relationshipLabel>
    <relationshipName>rel_1725930713715_end</relationshipName>
    <type>Lookup</type>
</CustomField>